# planner_tests

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
data/box2d/objects/: aletter.yaml  bletter.yaml  box.yaml  box_heavy_rough.yaml  box_heavy_slippery.yaml  box_light_rough.yaml  box_light_slippery.yaml  cletter.yaml  hletter.yaml  kletter.yaml  long_box.yaml  octagon.yaml  thin_horseshoe.yaml  tletter.yaml  wall.yaml  ycb_cube.yaml
data/box2d/planning_problems/: corridor_of_doom.yaml  corridor_of_doom_problem.yaml  door.yaml  door_problem.yaml  door_problem_hand.yaml  door_template.yaml  double_slalom.yaml  double_slalom_template.yaml  experiment_world.yaml  kth.yaml  kth_problem_human.yaml  kth_problem_learned.yaml  kth_template.yaml  long_slalom.yaml  long_slalom_problem.yaml  long_slalom_template.yaml  obstacle_wall.yaml  obstacle_wall_problem.yaml  obstacle_wall_problem_human.yaml  obstacle_wall_template.yaml  simple_test_problem.yaml  slalom.yaml  slalom_long_box.yaml  slalom_long_box_template.yaml  slalom_problem.yaml  slalom_problem_human.yaml  slalom_problem_human_hybrid.yaml  slalom_problem_human_oraclerrt.yaml  slalom_problem_human_slice.yaml  slalom_slippery.yaml  slalom_slippery_template.yaml  slalom_template.yaml  test_pushing_problem.yaml  training_problem.yaml  training_problem_0.yaml  yumi_cubes.yaml
data/box2d/robots/: 4dof_arm.yaml  box_robot.yaml  dot.yaml  dual_point_pusher.yaml  half_circle.yaml  holonomic_half_circle.yaml  holonomic_plower.yaml  rigid_fingers_robot.yaml  test_arm.yaml  yumi_pusher.yaml
data/box2d/sorting_problems/: test_problem.yaml
data/box2d/video_trajectories/double_slalom/: solution  solution1  solution10  solution11  solution12  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/video_trajectories/kth/: solution  solution1  solution10  solution11  solution12  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/video_trajectories/long_slalom/: solution  solution1  solution10  solution11  solution12  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/video_trajectories/obstacle_wall/: solution  solution1  solution10  solution11  solution12  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/video_trajectories/slalom/: solution  solution1  solution10  solution11  solution12  solution1_old_oracle  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/video_trajectories/slalom_slippery/: solution  solution1  solution10  solution11  solution12  solution2  solution3  solution4  solution5  solution6  solution7  solution8  solution9
data/box2d/worlds/: arm_wall_1m.yaml  corridor_of_doom_1m_1s.yaml  door_world_2m_3s.yaml  door_world_2m_3s_hand.yaml  free_world_1m_0s.yaml  free_world_1m_2s.yaml  free_world_2m_0s.yaml  free_world_2m_2s.yaml  free_world_6m_0s.yaml  kth_world.yaml  many_objects.yaml  slalom_long_box.yaml  slalom_world_1m_2s.yaml  slalom_world_1m_2s_slippery.yaml  slalom_world_1m_4s.yaml  slalom_world_1m_4s_slippery.yaml  slalom_world_dual_point_pusher.yaml  two_box_world.yaml  yumi_cubes.yaml
include/planner_tests/box2d/training_server/: ROSTrainingServer.h
include/planner_tests/box2d/widget/: AlphaSortWidget.h  PushPlannerWidget.h  QtUtils.h  SliceWidget.h
python/scripts/box2d/: Data_analysis.ipynb  fit_friction_parameters.py  fix_data_header.py  generate_data.py  generate_dummy_sas_data.py  generate_experiment_world.py  generate_robot.py  generate_shapes.py  generate_yaml.py  new_extension_test.py
python/src/planner_tests/: policy_bayes_opt.py  ros_oracle_bridge.py
src/planner_tests/box2d/: AlphaSort.cpp  OracleEvaluation.cpp  OracleTrainingDataGen.cpp  OracleTrainingServer.cpp  PushPlanner.cpp  test  testSDF.cpp
src/planner_tests/box2d/training_server/: ROSTrainingServer.cpp
src/planner_tests/box2d/widget/: AlphaSortWidget.cpp  PushPlannerWidget.cpp  QtUtils.cpp  SliceWidget.cpp
srv/: GetActionSpaceInfo.srv  GetCollisions.srv  GetObjectProperties.srv  GetState.srv  Propagate.srv  SetActiveObjects.srv  SetObjectProperties.srv  SetState.srv
